--- a/css/style.css
+++ b/css/style.css
@@ -1,220 +1,345 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Rubik:wght@400;600&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: "Poppins";
+    font-family: "Poppins";
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
 }
 
 .container {
-  width: 80%;
-  margin: auto;
+    width: 80%;
+    margin: auto;
 }
+
 .bg-ground {
-  background-image: url("../images/bg-ground.png");
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100vh;
+    background-image: url("../images/bg-ground.png");
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
 }
 
 .nav {
-  height: 64px;
-  width: 100%;
-  background-color: #fff;
+    height: 64px;
+    width: 100%;
+    background-color: #fff;
 
-  position: relative;
+    position: relative;
 }
 
 .nav .nav-header {
-  display: inline;
+    display: inline;
 }
 
 .nav .nav-header .nav-title {
-  display: inline-block;
-  font-size: 22px;
-  /* color: #fff; */
-  padding: 10px 10px 10px 10px;
+    display: inline-block;
+    font-size: 22px;
+    padding: 10px 10px 10px 10px;
 }
 
-/* .nav  .nav-header  .nav-title  img {
-    height: 40px;
-  } */
-
 .nav .nav-btn {
-  display: none;
+    display: none;
 }
 
 .nav-title {
-  font-family: "Rubik", sans-serif;
-  font-weight: 600;
+    font-family: "Rubik", sans-serif;
+    font-weight: 600;
 }
 
 .nav-title img {
-  width: 60px;
-  margin-right: -13px;
-  /* border-radius: 50%; */
+    width: 60px;
+    margin-right: -13px;
+
 }
+
 .nav .nav-links {
-  display: inline;
-  float: right;
-  font-size: 18px;
+    display: inline;
+    float: right;
+    font-size: 18px;
 }
 
 .nav .nav-links a {
-  display: inline-block;
-  padding: 13px 10px 13px 10px;
-  text-decoration: none;
-  color: #343a40;
+    display: inline-block;
+    padding: 13px 10px 13px 10px;
+    text-decoration: none;
+    color: #343a40;
 }
 
 .nav .nav-links a:hover {
-  color: blue;
+    color: blue;
 }
 
 .nav #nav-check {
-  display: none;
+    display: none;
 }
 
 .bg-text {
-  margin-top: 200px;
+    margin-top: 200px;
 }
 
 .bg-text .small {
-  font-family: "Rubik";
-  font-style: normal;
-  font-weight: 300;
-  font-size: 22px;
-  line-height: 26px;
-  /* identical to box height */
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 26px;
 
-  letter-spacing: 0.02em;
+    letter-spacing: 0.02em;
 
-  color: #343a40;
+    color: #343a40;
 }
 
 .bg-text .big {
-  font-family: "Rubik";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 74px;
-  line-height: 88px;
-  padding-top: 10px;
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 74px;
+    line-height: 88px;
+    padding-top: 10px;
 
-  letter-spacing: 0.03em;
+    letter-spacing: 0.03em;
 
-  color: #343a40;
+    color: #343a40;
 }
 
 .bg-text .text {
-  font-family: "Rubik";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-  margin-top: 5px;
-
-  letter-spacing: 0.01em;
-
-  color: #343a40;
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 5px;
+    letter-spacing: 0.01em;
+    color: #343a40;
 }
 
 .bg-text .button-guruh {
-  background: #3355ff;
-  border-radius: 4px;
-  width: 276px;
-  cursor: pointer;
-  border: none;
-  height: 55px;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  margin-top: 62px;
-  /* line-height: 24px; */
+    background: #3355ff;
+    border-radius: 4px;
+    width: 276px;
+    border: none;
+    height: 55px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    margin-top: 62px;
+    color: #ffffff;
 
-  color: #ffffff;
-}
-
-.bg-text span {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  /* identical to box height */
-
-  color: #343a40;
-}
-.bg-text .odamlar {
-  margin-left: 24px;
-  width: 38px;
-}
-
-.bg-text .button-guruh {
-  padding-top: 5px;
-  transition: 0.5s all ease;
 }
 
 .bg-text .button-guruh:hover {
-  word-spacing: 15px;
+    background: #3355ff;
+    color: #ffffff;
+    transition: 0.5s all ease;
+    transform: scale3d(1.05, 1.05, 1.05);
+}
+
+.bg-text span {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #343a40;
+}
+
+.bg-text .odamlar {
+    margin-left: 24px;
+    margin-bottom: -5px;
+    width: 38px;
+}
+
+
+.bg-text .button-guruh:hover {
+    word-spacing: 15px;
 }
 
 @media (max-width: 600px) {
-  .nav .nav-btn {
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-  }
-  .nav .nav-btn label {
-    display: inline-block;
-    width: 50px;
-    height: 60px;
-    padding: 13px;
-    margin-right: 30px;
-    cursor: pointer;
-  }
+    .nav .nav-btn {
+        display: inline-block;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+    }
 
-  .nav .nav-btn label span {
-    display: block;
-    width: 25px;
-    height: 11px;
-    border-top: 3px solid #000;
-  }
-  .nav .nav-links {
-    position: absolute;
-    display: block;
-    width: 100%;
-    background-color: #fff;
-    height: 0px;
-    transition: all 0.3s ease-in;
-    overflow-y: hidden;
-    top: 50px;
-    left: 0px;
-  }
+    .nav .nav-btn label {
+        display: inline-block;
+        width: 50px;
+        height: 60px;
+        padding: 13px;
+        margin-right: 30px;
+        cursor: pointer;
+    }
 
-  .nav .nav-links .centered {
-    padding-top: 100px;
-  }
+    .nav .nav-btn label span {
+        display: block;
+        width: 25px;
+        height: 11px;
+        border-top: 3px solid #000;
+    }
 
-  .nav .nav-links a {
-    display: block;
-    width: 100%;
-    top: 100px;
-    padding-top: 64px;
-    font-size: 25px;
+    .nav .nav-links {
+        position: absolute;
+        display: block;
+        width: 100%;
+        background-color: #fff;
+        height: 0px;
+        transition: all 0.3s ease-in;
+        overflow-y: hidden;
+        top: 50px;
+        left: 0px;
+    }
+
+    .nav .nav-links .centered {
+        padding-top: 100px;
+    }
+
+    .nav .nav-links a {
+        display: block;
+        width: 100%;
+        top: 100px;
+        padding-top: 64px;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .nav #nav-check:not(:checked)~.nav-links {
+        height: 0px;
+    }
+
+    .nav #nav-check:checked~.nav-links {
+        height: calc(100vh - 64px);
+    }
+
+    .bg-text span {
+        margin-left: -30px;
+        display: block;
+        margin-top: 20px;
+    }
+}
+
+/* 3 ta afzallik */
+
+.afzallik {
+    margin-top: -40px;
+    display: flex;
+    /* float: left; */
+    justify-content: space-between;
+}
+
+.card {
+    width: 200px;
+    height: 150px;
     text-align: center;
-  }
-  .nav #nav-check:not(:checked) ~ .nav-links {
-    height: 0px;
-  }
-  .nav #nav-check:checked ~ .nav-links {
-    height: calc(100vh - 64px);
-    /* overflow-y: auto; */
-  }
+    align-items: center;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 34px rgba(208, 208, 208, 0.4);
+    border-radius: 4px;
+
+}
+
+.card h2 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 78px;
+    color: #343A40;
+}
+
+.card h3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #343A40;
+}
+
+@media screen and (max-width: 600px) {
+    .afzallik {
+        flex-direction: column;
+        margin-top: 100px;
+        align-items: center;
+    }
+
+    .card {
+        width: 296px;
+        height: 174px;
+        margin-top: 24px;
+    }
+
+    .card h2 {
+        margin-top: 25px;
+    }
+}
+
+/* Biz haqimizda*/
+
+.biz {
+    margin-top: 140px;
+    display: flex;
+
+}
+
+.biz h2 {
+    font-weight: 700;
+    font-size: 42px;
+    line-height: 50px;
+    color: #343A40;
+}
+
+.cards {
+    width: 336px;
+    height: 311px;
+    background: #FFFFFF;
+    margin: 20px;
+    box-shadow: 0px 0px 34px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+}
+
+.cards .mcard {
+    width: 81px;
+    height: 81px;
+    background: #FFFFFF;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    margin-top: -40px;
+    margin-left: 40px;
+}
+
+.cards .mcard img {
+    width: 40px;
+    height: 40px;
+    margin: 20px;
+}
+
+.cards h2 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 164.6%;
+    letter-spacing: 0.01em;
+    color: #343A40;
+    margin-top: 20px;
+    margin-left: 15px;
+}
+
+.cards p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    color: #343A40;
+    margin-top: 10px;
+    margin-left: 15px;
 }
